force-app/main/default/objects/KimbleOne__ActivityAssignmentRateSummary__c/KimbleOne__ActivityAssignmentRateSummary__c.object-meta.xml
<CustomObject>
    <label>Activity Assignment Rate Summary</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Activity Assignment Rate Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Assignment Rate Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>