force-app/main/default/objects/KimbleOne__ActivityAssignmentRateSummary__c/fields/KimbleOne__EffectiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EffectiveFromDate__c</fullName>
    <label>Effective From Date</label>
    <type>Date</type>
</CustomField>