force-app/main/default/objects/KimbleOne__ActivityAssignmentRateSummary__c/fields/KimbleOne__ForecastCostRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastCostRate__c</fullName>
    <label>Forecast Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>