force-app/main/default/objects/KimbleOne__ActivityAssignmentRateSummary__c/fields/KimbleOne__InvoicingCurrencyForecastRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyForecastRevenueRate__c</fullName>
    <label>Invoicing Currency Forecast Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>